# homeassistant-vevor-heater

./: .gitignore  LICENSE  README.md  __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  fan.py  find_heater.py  hacs.json  manifest.json  number.py  pyproject.toml  select.py  sensor.py  strings.json  switch.py
custom_components/vevor_heater/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  fan.py  manifest.json  number.py  protocol.py  quality_scale.yaml  select.py  sensor.py  services.yaml  strings.json  switch.py
diesel_heater_ble/: LICENSE  README.md  protocol.py  pyproject.toml
diesel_heater_ble/.github/workflows/: ci.yml
diesel_heater_ble/tests/: conftest.py
specs/001-vevor-heater-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vevor-heater-integration/checklists/: requirements.md
specs/001-vevor-heater-integration/contracts/: ble-protocol.md
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_fan.py  test_find_heater.py  test_init.py  test_number.py  test_protocol.py  test_select.py  test_sensor.py  test_switch.py
