[project]
name = "homeassistant-vevor-heater"
version = "1.0.27"
description = "Home Assistant integration for Vevor/Hcalory/Sunster diesel heaters via BLE"
requires-python = ">=3.12"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "voluptuous>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["custom_components/vevor_heater", "diesel_heater_ble"]

[tool.coverage.report]
show_missing = true
fail_under = 20
