[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diesel-heater-ble"
version = "0.1.0"
description = "BLE protocol library for diesel heaters (Vevor, Hcalory, Sunster, HeaterCC)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Spettacolo83"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Spettacolo83/diesel-heater-ble"
Repository = "https://github.com/Spettacolo83/diesel-heater-ble"
Issues = "https://github.com/Spettacolo83/diesel-heater-ble/issues"

[tool.setuptools.packages.find]
include = ["diesel_heater_ble*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
